# AoC2020

./: .gitignore  Cargo.toml  README.md
current_day/: Cargo.toml
current_day/benches/: my_benchmark.rs
current_day/src/: common.rs  main.rs
current_day/src/day/: mod.rs
src/: cli.yml  example_export_macro.rs  lib.rs  main.rs
src/days/: common.rs  days.rs
src/days/d01/: mod.rs  subject.txt
src/days/d02/: mod.rs  subject.txt
src/days/d03/: mod.rs  subject.txt
src/days/d04/: input.txt  mod.rs  subject.txt
src/days/d04/tests/: p2-t1-4-.txt
src/days/d05/: mod.rs  subject.txt
src/days/d06/: mod.rs  subject.txt
src/days/d07/: mod.rs  subject.txt
src/days/d08/: console.rs  mod.rs  subject.txt
src/days/d09/: mod.rs  subject.txt
src/days/d10/: mod.rs  subject.txt
src/days/d11/: mod.rs  subject.txt  unoptimized_p1.rs
src/days/d12/: mod.rs  point.rs  subject.txt
src/days/d13/: mod.rs  subject.txt
src/days/d14/: mod.rs  subject.txt
src/days/d15/: mod.rs  subject.txt
src/days/d16/: mod.rs  subject.txt
src/days/d17/: mesh_animations.rs  mod.rs  render_3d.rs  subject.txt
src/days/d18/: mod.rs  notes.txt  parser.rs
src/days/d19/: mod.rs  parser.rs  subject.txt
src/days/d20/: mod.rs
