[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Lucas Parsy <lucas.parsy@epitech.eu>"]
edition = "2018"
description =  "my AoC exercises, this time in Rust"
readme = "README.md"
license = "GPL-3.0-or-later"
publish = false

[lib]
proc-macro = true

[dependencies]
clap = {version = "2.33", features = ["yaml"]} #arg parse

syn = "1.0" #build macro
quote = "1.0"

indexmap = "1.6.1"

array_tool = "1.0.3" #intesection vectors
itertools = "0.10.0" # combinations
petgraph = "0.5.1" #graph with cross-referencing objects
