[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Lucas Parsy <lucas.parsy@epitech.eu>"]
edition = "2018"
description =  "my AoC exercises, this time in Rust"
readme = "README.md"
license = "GPL-3.0-or-later"
publish = false

[features]
default = ["render_3d"]
render_3d = ["kiss3d"]

[lib]
proc-macro = true

[dependencies]
clap = {version = "2.33", features = ["yaml"]} #arg parse
rayon = "1.5.0" #multithread tests and running all days
#either = "1.6.1" #condition either iterator or reverse it. but unused with refactor

syn = "1.0" #build macro
quote = "1.0"

indexmap = "1.6.1"

array_tool = "1.0.3" #intesection vectors
itertools = "0.10.0" # combinations
petgraph = "0.5.1" #graph with cross-referencing objects

nom = "6.0.1" #advanced string parser

kiss3d = { version = "0.29.0", optional = true }
